background image and styling

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -110,7 +110,22 @@
 
 .div-image{
   background-image: linear-gradient(to right, rgba(31.5, 31.5, 10.5, 1) calc((50vw - 170px) - 340px), rgba(31.5, 31.5, 10.5, 0.84) 50%, rgba(31.5, 31.5, 10.5, 0.84) 100%);
+}
 
+.row {
+  color: white;
+}
+
+.row a {
+color: white;
+}
+
+.row a:hover{
+  color:gray;
+}
+
+.row ul {
+  padding-left : 0px;
 }
 
 
