--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -330,3 +330,14 @@ form a:hover {
   font-family: 'Source Sans Pro', Arial, sans-serif;
   font-size: 16px;
 }
+
+
+.div-set {
+  /* box-sizing: border-box; */
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  background-color: rgba(31.5, 31.5, 31.5, 1);
+  color: white;
+
+}
